  - Added save_to method to Mojo::Message.
  - Added gunzip and gzip methods to Mojo::ByteStream.
  - Added gunzip and gzip functions to Mojo::Util.
  - Improved HTML5.2 compliance of Mojo::DOM::HTML.
  - Fixed a bug in Mojo::Transaction::HTTP that prevented the finish event in
    Mojo::Message::Request from getting emitted sometimes.

8.01  2018-09-25
  - Updated jQuery to version 3.3.1.
  - Fixed order of command namespaces so Mojolicious can be upgraded without
    uninstalling first.
  - Fixed a small problem in one of the TLS tests where an error message check
    was too picky.

8.0  2018-09-15
  - Code name "Supervillain", this is a major release.
  - Changed query method in Mojo::URL to merge with hash references and append
    with array references instead of the other way around. Because appended
    pairs should be able to preserve order.
  - Changed template attribute in Mojolicious::Command to activate vars by
    default.
  - Removed test command.
  - Removed deprecated expect_close attribute from Mojo::Content.
  - Removed deprecated error and finish events from Mojo::IOLoop::Delay.
  - Removed experimental status from server_timing method in Mojo::Headers.
  - Removed experimental status from tag_to_html function in Mojo::DOM::HTML.
  - Removed experimental status from tag method in Mojo::DOM::HTML.
  - Removed experimental status from bytes_read and bytes_written methods in
    Mojo::IOLoop::Stream.
  - Removed experimental status from before_server_start hook.
  - Removed experimental status from timing->* helpers.
  - Added clone method to Mojo::Promise.
  - Added chmod method to Mojo::File.
  - Added prepare event to Mojo::UserAgent.
  - Added Mojolicious::Command::Author default namespace in
    Mojolicious::Commands.
  - Moved Mojolicious::Command::cpanify to
    Mojolicious::Command::Author::cpanify.
  - Moved Mojolicious::Command::generate to
    Mojolicious::Command::Author::generate.
  - Moved Mojolicious::Command::generate::app to