@@ -11,6 +11,8 @@
   - Improved HTML5.2 compliance of Mojo::DOM::HTML.
   - Fixed a bug in Mojo::Transaction::HTTP that prevented the finish event in
     Mojo::Message::Request from getting emitted sometimes.
+  - Fixed a bug where the is_fresh helper could only handle If-None-Match
+    headers with a single etag value.
 
 8.01  2018-09-25
   - Updated jQuery to version 3.3.1.
